Bug 477464 - Sidebar buttons are one pixel from the edge and thus do not adhere to Fitt's law
Summary: Sidebar buttons are one pixel from the edge and thus do not adhere to Fitt's law
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: qt6, usability
Depends on:
Blocks:
 
Reported: 2023-11-24 13:06 UTC by Quinten Kock
Modified: 2023-11-27 16:35 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Quinten Kock 2023-11-24 13:06:11 UTC
SUMMARY
Sidebar buttons are one pixel removed from the edge, making them harder to hit


STEPS TO REPRODUCE
1. Move cursor to edge of screen at position of a sidebar button like "Projects"
2. Click

OBSERVED RESULT
The entire sidebar is clicked, instead of the specific button that was aimed for

EXPECTED RESULT
The button touches the edge of the screen and is thus activated

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.27.9
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0

ADDITIONAL INFORMATION
Kate was built using kdesrc-build but reports as 24.01.75 so not sure if I should report as Git or 24.01.75.
Might be related to frameless Breeze?
Comment 1 Bug Janitor Service 2023-11-27 16:02:18 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/377
Comment 2 Carl Schwan 2023-11-27 16:35:27 UTC
Git commit 26e2bb579cb746f5e8046d2e851b510257e3f21f by Carl Schwan.
Committed on 27/11/2023 at 16:59.
Pushed by carlschwan into branch 'master'.

Decrease padding for KMultiTabBar

In effect revert https://invent.kde.org/plasma/breeze/-/merge_requests/368

Visually having at least a one pixel padding is important but this
decrease the usuability as it breaks the Fitts's Law.

A long term solution would be to redirect the click event to the nearest
button, but for now let's just fix the usuability issue.

M  +1    -1    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/-/commit/26e2bb579cb746f5e8046d2e851b510257e3f21f