Decrease padding for KMultiTabBar

In effect revert https://invent.kde.org/plasma/breeze/-/merge_requests/368

Visually having at least a one pixel padding is important but this
decrease the usuability as it breaks the Fitts's Law.

A long term solution would be to redirect the click event to the nearest
button, but for now let's just fix the usuability issue.

BUG: 477464